/*
 * $Id: ChangeLog,v 1.2849 2004/04/29 16:52:55 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-29 10:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Fixed [real bad] GPF traps realted to unitialized .type member of HB_ITEM.

2004-04-29 09:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c
    ! Optimized to compile RegEx only once when scanning memvars.

2004-04-29 08:45 UTC-0400 Sylvain Robert <s.robert/at/videotron.ca>
  * source/rtl/fserror.c
    * Added defined(HB_OS_WIN_32) to each (HB_WIN32_IO) because MSVC family
      compiler don't report the right error number.
    Ex: if hb_fsdelete() failed the error number was 0

2004-04-28 15:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/itemapi.c
    * MSVC uses _snprintf() instead of snprintf()

2004-04-28 15:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    * Moved HB_EXPORT qualifier infront of pointer type (really we should always use HB_EXPORT as *first* token)

  * source/vm/codebloc.c
  * source/vm/fastitem.c
    + Added commented-out debugging TraceLog().

  * source/vm/memvars.c
    ! Fixed hb_memvarsRelease() to avoid double releasing.

  * tests/pp_harb.ch
    ! Fixed to support recent changes to Symbol structure.

2004-04-28 20:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/linux/gcc.cf
    + fPIC added for some platforms - disabled by default

  * xharbour/include/hbdefs.h
    + some modification for 64bit platforms

  * xharbour/include/hbstack.h
    + proper casting for stack macros on 64bit platform

  * xharbour/include/hbvmpub.h
    * added
       union {
          PHB_FUNC pFunPtr;
          int iStaticsBase;
       } value
      to HB_SYMB structure to remove pointer/int conversion