@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2849 2004/04/29 16:52:55 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2850 2004/04/29 17:57:22 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-29 16:21 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/classes.c
+    ! Fixed management of inherited properties in __CLSNEW().
 
 2004-04-29 10:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/classes.c
